languages/io-automaton-fe/src/test/resources/valid/correctness/ComplexModelWithVariousTypes.ioautomaton
package valid.ForCorrectnessTest;

automaton ComplexModelWithVariousTypes{
	
	input int[] values;
	input Test valueTest;
	variable int storage;
	output int result;
	
	state S4;
	state S1, S2;
	initial S1 / {result = 255};
	
	S1->S2 [values.length == 5] {storage = 0} / {storage = values[0]};
	S2->S1 [valueTest.get() == 5] {storage = 5} / {result = valueTest.get()};
	
}