languages/io-automaton-fe/src/test/resources/invalid/UseOfUndeclaredField.ioautomaton
package invalid;

automaton UseOfUndeclaredField{
    input int a;
    variable int b;
    output int c;
    
    state A,B;
    
    initial A;
    
    A -> B {x == "Hallo Welt", y == 5};
    B -> A {a == 2, b == 3};
    
}